@@ -8,7 +8,7 @@ import java.util.ArrayList;
 import java.util.UUID;
 
 import net.minecraft.server.MinecraftServer;
-import net.minecraft.server.management.WhitelistEntry;
+import net.minecraft.server.players.UserWhiteListEntry;
 import pw.twpi.whitelistsync2.Config;
 import pw.twpi.whitelistsync2.WhitelistSync2;
 import pw.twpi.whitelistsync2.json.OppedPlayersFileUtilities;
@@ -36,7 +36,7 @@ public class SqLiteService implements BaseService {
         boolean isSuccess = true;
 
         try {
-            Class.forName("org.sqlite.JDBC").newInstance();
+            Class.forName("org.sqlite.JDBC").getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             WhitelistSync2.LOGGER.error("Failed to init sqlite connector. Is the library missing?");
             WhitelistSync2.LOGGER.error(e.getMessage(), e);
@@ -298,7 +298,7 @@ public class SqLiteService implements BaseService {
                 if (whitelisted == 1) {
                     if (localWhitelistedPlayers.stream().noneMatch(o -> o.getUuid().equals(uuid))) {
                         try {
-                            server.getPlayerList().getWhiteList().add(new WhitelistEntry(player));
+                            server.getPlayerList().getWhiteList().add(new UserWhiteListEntry(player));
                             WhitelistSync2.LOGGER.debug("Added " + name + " to whitelist.");
                             records++;
                         } catch (NullPointerException e) {
